--- a/site/mod2_solution/css/index_style.css
+++ b/site/mod2_solution/css/index_style.css
@@ -8,9 +8,18 @@
   box-sizing: border-box;
 }
 
-h1 {
-  margin-bottom: 15px;
+body {
+    margin: 0;
+    padding: 0;
+    font-family:Arial, Helvetica, sans-serif;
 }
+
+h1 {
+    margin-bottom: 30px;
+    text-align: center;
+    font-size: 40px;
+}
+
 
 .box-content {
   border: 3px solid black;
